--- a/alter_app/css/responsive.css
+++ b/alter_app/css/responsive.css
@@ -10,11 +10,11 @@
     }
     .wrapper_reasons_to_me__h2 {
         margin:0;
-        padding: 0;
+        padding: 0 5px;
     }
     .wrapper_reasons_to_me{
         margin: 0em 1em;
-        padding: 0;
+        padding: 0 5px;
     }
     .main_form{
         margin: 0;
