--- a/alter_app/css/header.css
+++ b/alter_app/css/header.css
@@ -1,11 +1,10 @@
 .logo_header {
     text-align: center;
     margin-top: 2em;
-    padding: ;
 }
 
 .logo_header__a {
-    font-size: 30px;
+    /* font-size: 30px; */
     color: black;
     font-family: "Plaufair Display", serif;
     font-weight: 100;
@@ -23,5 +22,5 @@
 
 .navbar-item{
     color:#2b30a3;
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
 }
