--- a/alter_app/css/about.css
+++ b/alter_app/css/about.css
@@ -1,14 +1,40 @@
-.wrapper_about_me_first, .academic_information, .academic_wrapper{
-    margin:0 5em;
+.wrapper_about_me_first,
+.academic_information,
+.academic_wrapper {
+    margin: 0 5em;
 }
-.academic_information_first_column .academic__img{
+
+.academic_information_first_column .academic__img {
     text-align: center;
 }
 
-.row_img_second{
-    text-align: center;
+.row_img__first__span,.row_img_first_mpgu{
+    display: block;
 }
-.img_wp{
+.academic__img{
+    display: flex;
+    justify-content: center;
+
+}
+.academic_wrapper_h5{
+    padding-bottom: 1em;
+}
+.academic__h6 {
+    padding-bottom: 0.5em;
+}
+.academic_wrapper{
+    margin-top: 5em;
+}
+.row_img__first{
+    text-align: center;
+    display: flex !important;
+    flex-flow: column wrap !important;
+    align-items: center;
+    margin-bottom: 1.5em;
+    /* font-size: 8px; */
+}
+
+.img_wp {
     background-size: cover;
     background-position: top top;
     background-repeat: no-repeat;
@@ -16,49 +42,104 @@
     margin-bottom: 1em;
     width: 400px;
     justify-content: center;
-    border: 2px solid black;    
+    border: 2px solid black;
 }
-.fr-01{
-    background-image: url('../img/about_diplom_bachelor-min.png') ;
-    
-}
-.fr-02{
-    background-image: url('../img/about_diplom_with_profession.png');
-   
-}
-.fr-03{
-    background-image: url('../img/about_magister.png');
-   
+.row_img__first__span{
+    display: block;
 }
 
-.fr-1{
+.fr-01 {
     background-image: url('../img/about_diplom_bachelor-min.png');
 }
-.fr-2{
+
+.fr-02 {
     background-image: url('../img/about_diplom_with_profession.png');
 }
-.fr-3{
+
+.fr-03 {
     background-image: url('../img/about_magister.png');
 }
-.fr-4{
+
+.fr-1 {
+    background-image: url('../img/about_diplom_bachelor-min.png');
+}
+
+.fr-2 {
+    background-image: url('../img/about_diplom_with_profession.png');
+}
+
+.fr-3 {
+    background-image: url('../img/about_magister.png');
+}
+
+.fr-4 {
     background-image: url('../img/od/study_lesson.jpeg');
 }
-.fr-5{
+
+.fr-5 {
     background-image: url('../img/od/conf_vigot.jpeg');
 }
-.fr-6{
+
+.fr-6 {
     background-image: url('../img/od/lomonosov_2016.jpeg');
 }
 
-.fr-7{
+.fr-7 {
     background-image: url('../img/od/lomonosov_2016.jpeg');
 }
-.fr-8{
+
+.fr-8 {
     background-image: url('../img/od/lomosov-2017_sert.jpeg');
 }
-.fr-9{
+
+.fr-9 {
     background-image: url('../img/od/school_psyc.jpeg');
 }
-.fr-10{
+
+.fr-10 {
     background-image: url('../img/od/rpp.png');
+}
+
+.fr-11 {
+    background-image: url('../img/kpt/dpdg.jpeg');
+}
+
+.fr-12 {
+    background-image: url('../img/kpt/kpt_1.jpeg');
+}
+
+.fr-13 {
+    background-image: url('../img/kpt/kpt_1.jpeg');
+}
+
+.fr-14 {
+    background-image: url('../img/kpt/kpt_3.jpeg');
+}
+
+.fr-15 {
+    background-image: url('../img/kpt/kpt_4.jpeg');
+}
+
+.fr-16 {
+    background-image: url('../img/kpt/kpt_5.jpeg');
+}
+
+.fr-17 {
+    background-image: url('../img/kpt/kpt_6.jpeg');
+}
+
+.fr-18 {
+    background-image: url('../img/kpt/kpt_7.jpeg');
+}
+
+.fr-19 {
+    background-image: url('../img/kpt/kpt_8.jpeg');
+}
+
+.fr-20 {
+    background-image: url('../img/kpt/kpt_9.jpeg');
+}
+
+.fr-21 {
+    background-image: url('../img/kpt/kpt_10.jpeg');
 }
