--- a/alter_app/css/contacts.css
+++ b/alter_app/css/contacts.css
@@ -10,7 +10,7 @@
 .second_contact__img  {
     background-size:contain;
     background-position:  top center;
-    height: 400px;
+    height: 300px;
     background-repeat: no-repeat;
 
 }
@@ -23,4 +23,23 @@
 }
 .second_contact_girl {
     background-image: url('../img/kont_girl_laptop.png');
+}
+.psy_in_our_life__h3_cont{
+    padding-top: 28px;
+}
+.kont_adress__map_wrap{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.kont_adress__map_wrap iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+.conts{
+    margin-top: 5rem;
 }
