--- a/alter_app/css/psycho.css
+++ b/alter_app/css/psycho.css
@@ -1,6 +1,6 @@
 
 .psy_first_wrapper{
-    padding: 2em 5em 1em 5em;
+    margin: 28px 5em 1em 5em;
 }
 .psy_second_wrapper{
     padding: 1em 5em 1em 5em;
@@ -16,13 +16,31 @@
 .psy_in_our_life__p{
     font-family: "PT Serif", sans-serif;
     margin-top: 1.2em;
-    /* line-height: 1.6; */
+    padding: 0 10px;
 }
+
+
 .psy_third_wrapper{
-    background-image: url('../img/psychoterapy_client_and_psychologist.png');
+    background-image: url('../img/psychoterapy_client_and_psychologist_01.png');
     background-repeat: no-repeat;
     background-position: center center;
     border-style: contain;
     height: 35rem;
     margin: 3em auto;
+    animation-name: psy;
+    /* animation-direction: alternate; */
+    animation-duration: 5s;
+    transition-timing-function: ease-out;
+    animation-iteration-count: infinite;
+}
+@keyframes psy{
+    0%{
+        background-image: url('../img/psychoterapy_client_and_psychologist_01.png');   
+    }
+    50%{
+        background-image: url('../img/psychoterapy_client_and_psychologist_02.png');    
+    }
+    100%{
+        background-image: url('../img/psychoterapy_client_and_psychologist.png');    
+    }
 }
