--- a/alter_app/css/about.css
+++ b/alter_app/css/about.css
@@ -163,6 +163,9 @@
 .fr-21 {
     background-image: url('../img/kpt/kpt_10.jpeg');
 }
+.fr-22 {
+    background-image: url('../img/od/kpt_13.jpeg');
+}
 .academic_wrapper_last{
     padding-bottom: 10em;
 }
