--- a/alter_app/css/responsive.css
+++ b/alter_app/css/responsive.css
@@ -21,6 +21,30 @@
         padding-left: 0;
         
     }
+    .wrapper_about_me_first,
+    .academic_information,
+    .academic_wrapper {
+        margin: 40px 0em !important;
+    }
+    
+.psy_first_wrapper{
+    margin: 28px 1em 1em 1em !important;
+}
+.psy_second_wrapper{
+    padding: 1em !important;
+}
+.method_wrapper_first, .method_wrapper_third, .method_wrapper_fourth,.wrapper_method_fifth {
+    padding: 2em 1em 1em 1em !important;
+}
+.depression_wrapper, .wrapper_symptoms_depression, .anxious_wrapper, .wrapper_symptoms_anxious,.wrapper_panic,.wrapper_sympotms_panic,.wrapper_anx {
+    padding:0 1em !important;
+    background-color: white;
+    justify-content: center;
+}
+.first_contact, .kont_adress, .kont_adress__map {
+    margin: 0 1em !important;
+}
+    
 }
 
 /* Здесь я попробую написать для больших экранов */
