--- a/alter_app/css/responsive.css
+++ b/alter_app/css/responsive.css
@@ -44,6 +44,11 @@
 .first_contact, .kont_adress, .kont_adress__map {
     margin: 0 1em !important;
 }
+.second_nav  ul {
+    display: flex !important;
+    flex-direction: column;
+    text-align: center;
+}
     
 }
 
