--- a/alter_app/css/index.css
+++ b/alter_app/css/index.css
@@ -1,49 +1,42 @@
 .wrapper_intro {
     text-align: center;
 }
-
 .wrapper_intro__img {
+    margin-top: 2em;
     background-image: url('../img/main_client_and_therapist_1.png');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
-    height: 30em;
+    height: 28em;
     animation-name: bdSlowIn;
     animation-duration: 1s;
 }
-
 .wrapper_intro__text {
     padding: 2em 0;
     font-family: 'PT Serif', serif;
 }
-
 .wrapper_about_me {
     align-items: center;
     background: rgb(247, 247, 247);
     font-family: 'PT Serif', serif;
     line-height: 1.5;
 }
-
 .wrapper_about_me p {
     margin-top: 10px;
 }
 
-/* .wrapper_about_me__text {
-    margin-right: 10em;
-} */
-
 .wrapper_about_me__ava {
-    background-image: url('../img/main_ava.png');
+    background-image: url('../img/nata_ava.jpg');
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center center;
-    width: 420px;
-    height: 420px;
+    /* width: 150px; */
+    height: 450px;
     justify-content: center;
     /* margin-left: 10%; */
     size: 100%;
+    /* border:2px solid black; */
 }
-
 .wrapper_reasons_to_me__h2 {
     font-size: 30px;
     color: black;
