--- a/alter_app/sass/_method.sass
+++ b/alter_app/sass/_method.sass
@@ -1,5 +1,5 @@
 .method_wrapper_first, .method_wrapper_third, .method_wrapper_fourth,.wrapper_method_fifth 
-    margin: $pad_border !important
+    margin: $pad_border
 .method_wrapper_second__quote 
     text-align: center
     color: hsl(217, 71%, 53%)
