--- a/alter_app/sass/_responsive.sass
+++ b/alter_app/sass/_responsive.sass
@@ -23,7 +23,8 @@
     .psy_second_wrapper 
         padding: 1em !important 
     .method_wrapper_first, .method_wrapper_third, .method_wrapper_fourth,.wrapper_method_fifth  
-        padding: 2em 1em 1em 1em !important 
+        padding: 2em 0.5em 0.5em 1em !important 
+        margin: $mob_border !important
     .depression_wrapper, .wrapper_symptoms_depression, .anxious_wrapper, .wrapper_symptoms_anxious,.wrapper_panic,.wrapper_sympotms_panic,.wrapper_anx  
         padding:0 1em !important 
         background-color: white 
@@ -34,6 +35,7 @@
         display: flex !important 
         flex-direction: column 
         text-align: center 
+        
  
     
  
@@ -47,6 +49,9 @@
         padding: 5em 10em 
     .wrapper_reasons_to_me 
         font-size: 20px
+
+
+
 
      
     
