--- a/alter_app/sass/_variables.sass
+++ b/alter_app/sass/_variables.sass
@@ -3,5 +3,6 @@ $footer_color: #0000d7
 // $second_nav_bg_color: 
 $hs: 2em
 $pad_border: 40px 10em 
+$mob_border: 40px 2em 
 $light: hsl(0, 0%, 96%)
 $but_color: #7ECEFC
